flexbox_main_font-size-title

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,7 @@ a {
 
 .all_nav {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-
 }
 
 /* logo */
@@ -88,6 +86,9 @@ a {
 
 /* font title */
 .font-size-title {
+  outline: 1px solid red;
+  margin-bottom: 30px;
+  padding-top: 200px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.363;
@@ -97,9 +98,14 @@ a {
   text-transform: uppercase;
 }
 
+h1 span {
+  display: block;
+}
+
 /* button index */
 
 .font-size-button-index {
+  outline: 1px solid red;
   margin: 0 auto;
   min-width: 200px;
   padding: 10px 32px;
@@ -208,6 +214,7 @@ a {
 
 /* start main styles */
 .complementary {
+  outline: 1px solid red;
   background: var(--complementary-color);
 }
 
@@ -283,3 +290,7 @@ a {
 .nav-text-footer:hover {
   color: var(--highlight-color);
 }
+
+
+
+/* Test */
