--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,18 @@ a {
   margin: 0 auto;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* All nav menu */
 
 .all_nav {
   display: flex;
   align-items: center;
 }
+
 
 /* logo */
 
@@ -86,9 +92,7 @@ a {
 
 /* font title */
 .font-size-title {
-  outline: 1px solid red;
   margin-bottom: 30px;
-  padding-top: 200px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.363;
@@ -105,7 +109,6 @@ h1 span {
 /* button index */
 
 .font-size-button-index {
-  outline: 1px solid red;
   margin: 0 auto;
   min-width: 200px;
   padding: 10px 32px;
@@ -114,9 +117,10 @@ h1 span {
   background-color: var(--highlight-color);
   color: var(--main-background-color);
   line-height: 1.875;
-  display: flex;
+  display: block;
   align-items: center;
   text-align: center;
+  border: 1px solid transparent;
   border-radius: 4px;
   letter-spacing: 0.06em;
 }
@@ -212,10 +216,11 @@ h1 span {
   cursor: pointer;
 }
 
+
 /* start main styles */
 .complementary {
-  outline: 1px solid red;
   background: var(--complementary-color);
+  display: block;
 }
 
 .text-title-h2-index {
@@ -225,7 +230,26 @@ h1 span {
   letter-spacing: 0.03em;
 }
 
+.all_main_h3 {
+  display: flex;
+  margin-left: 15px;
+  margin-right: 15px;
+  justify-content:center;
+  }
+  
+
+.all_main_h3 .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+
+.all_main_h3 .item {
+  display: flex;
+  min-width: 270px;
+}
+
 .text-title-h3-index {
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.172;
   letter-spacing: 0.03em;
