--- a/css/styles.css
+++ b/css/styles.css
@@ -5,31 +5,33 @@
   --complementary-color: #2f303a;
   --complementary-color-text: #757575;
   --complementary-color-text-nav: #ffffff99;
+  --display-property-flex: flex;
 }
 
-ul, ol {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 address {
-	font-style: normal;
+  font-style: normal;
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
@@ -44,16 +46,20 @@ a {
 
 /* All nav menu */
 
-.all_nav {
-  display: flex;
-  align-items: center;
+.header_border {
+  border-radius: 1px;
+  border-bottom: 1px solid transparent;
 }
 
+.all_nav {
+  display: var(--display-property-flex);
+  align-items: center;
+}
 
 /* logo */
 
 .nav_all_link_logo {
-  margin-left: 15px;
+  padding-left: 15px;
 }
 
 .studiocolor-top {
@@ -111,7 +117,8 @@ h1 span {
 /* button index */
 
 .font-size-button-index {
-  margin: 0 auto;
+  margin-left: 485px;
+  margin-right: 485px;
   min-width: 200px;
   padding: 10px 32px;
   font-family: Roboto;
@@ -127,38 +134,65 @@ h1 span {
   letter-spacing: 0.06em;
 }
 
+/* Cвойство flexbox для основной секции (портфоли)*/
+
 /* button portfolio */
+
+.button_portfolio {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 34px;
+  justify-content: center;
+  align-items: center;
+  display: var(--display-property-flex);
+}
+
 .font-size-button-portfolio {
+  margin: 0 auto;
+  padding: 6px 22px;
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
+  display: block;
+  align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .font-size-button-portfolio:focus,
 .font-size-button-portfolio:hover {
-  color: #2196f3;
+  background-color: var(--highlight-color);
+  color: var(--main-background-color);
+}
+
+.all_portfolio_button {
+  display: var(--display-property-flex);
+  justify-content: center;
+  align-items: center;
+}
+
+.all_portfolio_button li:not(:last-child) {
+  margin-right: 8px;
 }
 
 .nav_all_link {
   display: block;
-  display: flex;
+  display: var(--display-property-flex);
   margin-top: 32px;
   margin-bottom: 32px;
   margin-left: 93px;
 }
 
 .nav_all_link .item {
-  /* outline: 1px solid red; */
   margin-right: 50px;
 }
 
 .nav_all_link .item:last-child {
   margin-right: 0;
 }
-
 
 .nav-link {
   text-decoration: none;
@@ -174,13 +208,13 @@ h1 span {
 }
 
 .contact_nav {
-  display: flex;
+  display: var(--display-property-flex);
   margin-left: 331px;
-  margin-right: 15px;
+  padding-right: 15px;
 }
 
 .contact_nav .item + .item {
- margin-left: 50px;
+  margin-left: 50px;
 }
 
 .nav-link-mail {
@@ -215,7 +249,6 @@ h1 span {
   cursor: pointer;
 }
 
-
 /* start main styles */
 .complementary {
   background: var(--complementary-color);
@@ -223,12 +256,12 @@ h1 span {
 }
 
 .section_h2 {
-  margin-left: 15px;
-  margin-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.all_main_h2  {
-  display: flex;
+.all_main_h2 {
+  display: var(--display-property-flex);
   align-items: center;
   justify-content: center;
 }
@@ -248,23 +281,23 @@ h1 span {
 /* Наша команда */
 
 .all_main_h2_team {
-  margin-left: 15px;
-  margin-right: 15px;
-  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: var(--display-property-flex);
   align-items: center;
   justify-content: center;
- }
+}
 
 .item_team {
   text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
 .all_main_h2_team .item_team:not(:last-child) {
   margin-right: 30px;
 }
-
 
 .text-team-index {
   margin-top: 30px;
@@ -276,20 +309,18 @@ h1 span {
 }
 
 .all_main_h3 {
-  display: flex;
-  margin-left: 15px;
-  margin-right: 15px;
-  justify-content:center;
-  }
-  
+  display: var(--display-property-flex);
+  padding-left: 15px;
+  padding-right: 15px;
+  justify-content: center;
+}
 
 .all_main_h3 .item:not(:last-child) {
   margin-right: 30px;
 }
 
-
 .all_main_h3 .item {
-  display: flex;
+  display: var(--display-property-flex);
   min-width: 270px;
 }
 
@@ -309,14 +340,45 @@ h1 span {
   color: var(--complementary-color-text);
 }
 
-
-
 .text-command-professions-index {
   margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.171;
   color: var(--complementary-color-text);
   letter-spacing: 0.03em;
+}
+
+/* Cвойство flexbox для основной секции (портфоли)*/
+
+/* icon portfolio menu */
+
+.portfolio_icon {
+  padding-left: 15px;
+  padding-right: 15px;
+  justify-content: center;
+  align-items: center;
+  display: var(--display-property-flex);
+}
+
+.portfolio_icon ul {
+  display: var(--display-property-flex);
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.portfolio_element {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.portfolio_element:nth-child(3n) {
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+.portfolio_element img {
+  border-bottom: 1px solid transparent;
 }
 
 .text-title-portfolio {
@@ -334,8 +396,8 @@ h1 span {
 
 .footer_all {
   background-color: var(--complementary-color);
-  margin-left: 15px;
-  margin-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .footer_all_box {
@@ -343,7 +405,6 @@ h1 span {
   justify-content: flex-start;
   align-items: center;
 }
-
 
 .address_index {
   font-size: 14px;
@@ -358,16 +419,15 @@ h1 span {
 
 .footer_all_box_contacts li:not(:last-child) {
   padding-bottom: 9px;
-} 
+}
 
 .nav-text-footer {
   text-decoration: none;
   font-size: 14px;
   line-height: 1.714;
   color: var(--complementary-color-text-nav);
-  letter-spacing: 0.03em;p
+  letter-spacing: 0.03em;
 }
-
 
 .nav-text-footer:focus,
 .nav-text-footer:hover {
