--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,18 @@ a {
 }
 
 .section {
-  /* padding-top: 94px; */
+  padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.zeroing_section_top {
+  padding-top: 0px;
+}
+
+.hero_section_top {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: var(--complementary-color);
 }
 
 /* All nav menu */
@@ -92,6 +102,10 @@ a {
   font-family: "Roboto", sans-serif;
   color: var(--first-text-primary);
 }
+/* 
+.hero_background {
+  background-color: var(--complementary-color);
+} */
 
 .hero_title {
   padding-top: 200px;
@@ -108,7 +122,6 @@ a {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  background-color: darkgray;
 }
 
 h1 span {
@@ -157,10 +170,6 @@ studiocolor_bottom .font-size-button-portfolio:focus,
 .font-size-button-portfolio:hover {
   background-color: var(--highlight-color);
   color: var(--main-background-color);
-}
-
-.main_general {
-  padding-top: 94px;
 }
 
 .all_portfolio_button {
@@ -275,8 +284,7 @@ studiocolor_bottom .font-size-button-portfolio:focus,
   margin-right: 30px;
 }
 
-.item_team_ .text-team-index {
-  margin-top: 30px;
+.text-team-index {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -338,7 +346,7 @@ studiocolor_bottom .font-size-button-portfolio:focus,
 }
 
 .portfolio_element {
-  width: calc((100% - 60px) / 3);
+  width: calc((100% - 90px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
 }
