--- a/css/styles.css
+++ b/css/styles.css
@@ -343,11 +343,13 @@ studiocolor_bottom .font-size-button-portfolio:focus,
   align-items: center;
   display: var(--display-property-flex);
   flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
 }
 
 .portfolio_element {
   width: calc((100% - 90px) / 3);
-  margin-right: 30px;
+  margin-left: 30px;
   margin-bottom: 30px;
 }
 
